--- a/CambiaTuVida.html
+++ b/CambiaTuVida.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="script.js"></script>
+    <link rel="icon" href="Page icono.png" />
     <title>Soluciones de Amor</title>
   </head>
   <body>
